unpackaged/main/default/objects/Retool_User__c/Retool_User__c.object-meta.xml
<CustomObject>
    <label>Retool User</label>
    <nameField>
        <label>Retool User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retool Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>