unpackaged/main/default/objects/Retool_User__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <formula>Retool_Org__r.Account__r.Account_ID_case_safe__c</formula>
    <label>AccountID</label>
    <type>Text</type>
</CustomField>