unpackaged/main/default/objects/Retool_User__c/fields/Clean_Email_Issue__c.field-meta.xml
<CustomField>
    <fullName>Clean_Email_Issue__c</fullName>
    <formula>IF( AND( Email__c &lt;&gt;  Contact__r.Email ,  Email_Clean__c =  Contact__r.Email ), TRUE, FALSE)</formula>
    <label>Clean Email Issue</label>
    <type>Checkbox</type>
</CustomField>