unpackaged/main/default/objects/Retool_User__c/fields/Email_Clean_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Clean_Domain__c</fullName>
    <label>Email: Clean Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>