unpackaged/main/default/objects/Retool_User__c/fields/Email_Domain_Map__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email: Domain Map</label>
    <referenceTo>Domain_Map__c</referenceTo>
    <relationshipLabel>Retool Users</relationshipLabel>
    <relationshipName>Retool_Users</relationshipName>
    <type>Lookup</type>
</CustomField>