unpackaged/main/default/objects/Retool_User__c/fields/Email_Domain_Type_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain_Type_Mismatch__c</fullName>
    <formula>TEXT(Email_Domain_Type__c) != TEXT(Email_Domain_Map__r.Type__c) &amp;&amp; NOT(ISBLANK(Email_Domain_Map__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email: Domain Type Mismatch?</label>
    <type>Checkbox</type>
</CustomField>