unpackaged/main/default/objects/Retool_User__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <externalId>true</externalId>
    <label>zOLD ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>