unpackaged/main/default/objects/Retool_User__c/fields/Is_Admin__c.field-meta.xml
<CustomField>
    <fullName>Is_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Admin?</label>
    <type>Checkbox</type>
</CustomField>