unpackaged/main/default/objects/Retool_User__c/fields/Is_Builder__c.field-meta.xml
<CustomField>
    <fullName>Is_Builder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Builder?</label>
    <type>Checkbox</type>
</CustomField>