unpackaged/main/default/objects/Retool_User__c/fields/Is_Editor__c.field-meta.xml
<CustomField>
    <fullName>Is_Editor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Editor?</label>
    <type>Checkbox</type>
</CustomField>