unpackaged/main/default/objects/Retool_User__c/fields/Is_Email_Anonymized__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Anonymized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Anonymized?</label>
    <type>Checkbox</type>
</CustomField>