unpackaged/main/default/objects/Retool_User__c/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enabled?</label>
    <type>Checkbox</type>
</CustomField>