unpackaged/main/default/objects/Retool_User__c/fields/Last_Active_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Active_At__c</fullName>
    <label>zOLD Last Active At</label>
    <type>DateTime</type>
</CustomField>