unpackaged/main/default/objects/Retool_User__c/fields/Moment__c.field-meta.xml
<CustomField>
    <fullName>Moment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Moment</label>
    <referenceTo>Moment__c</referenceTo>
    <relationshipLabel>Retool Users</relationshipLabel>
    <relationshipName>Retool_Users</relationshipName>
    <type>Lookup</type>
</CustomField>