unpackaged/main/default/objects/Retool_User__c/fields/OPS_Suppress_from_Flows__c.field-meta.xml
<CustomField>
    <fullName>OPS_Suppress_from_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPS Suppress from Flows</label>
    <type>Checkbox</type>
</CustomField>