unpackaged/main/default/objects/Retool_User__c/fields/Org_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Org_Hierarchy__c</fullName>
    <description>Calculates the relative order of multiple orgs when identifying a primary org on Case creation</description>
    <formula>Retool_Org__r.Org_Hierarchy__c</formula>
    <label>Org Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>