unpackaged/main/default/objects/Retool_User__c/fields/Organization_Join_Order__c.field-meta.xml
<CustomField>
    <fullName>Organization_Join_Order__c</fullName>
    <label>Organization: Join Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>