unpackaged/main/default/objects/Retool_User__c/fields/Platform_Type__c.field-meta.xml
<CustomField>
    <fullName>Platform_Type__c</fullName>
    <label>zOLD Platform Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platform_Type</valueSetName>
    </valueSet>
</CustomField>