unpackaged/main/default/objects/Retool_User__c/fields/Profile_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo_URL__c</fullName>
    <label>zOLD Profile Photo URL</label>
    <type>Url</type>
</CustomField>