unpackaged/main/default/objects/Retool_User__c/fields/Retool_Org__c.field-meta.xml
<CustomField>
    <fullName>Retool_Org__c</fullName>
    <label>Retool Org</label>
    <referenceTo>Retool_Org__c</referenceTo>
    <relationshipLabel>Retool Users</relationshipLabel>
    <relationshipName>Retool_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>