unpackaged/main/default/objects/Retool_User__c/fields/Signup_Date__c.field-meta.xml
<CustomField>
    <fullName>Signup_Date__c</fullName>
    <formula>DATEVALUE(Created_At__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signup Date</label>
    <type>Date</type>
</CustomField>