unpackaged/main/default/objects/Retool_User__c/fields/Signup_Month__c.field-meta.xml
<CustomField>
    <fullName>Signup_Month__c</fullName>
    <formula>DATE(YEAR(Signup_Date__c),MONTH(Signup_Date__c),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signup Month</label>
    <type>Date</type>
</CustomField>