unpackaged/main/default/objects/Retool_User__c/fields/Signup_Week__c.field-meta.xml
<CustomField>
    <fullName>Signup_Week__c</fullName>
    <formula>CASE(MOD(Signup_Date__c - DATE(1900, 1, 6), 7),
0, Signup_Date__c + 0,
1, Signup_Date__c + 6,
2, Signup_Date__c + 5,
3, Signup_Date__c + 4,
4, Signup_Date__c + 3,
5, Signup_Date__c + 2,
6, Signup_Date__c + 1,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signup Week</label>
    <type>Date</type>
</CustomField>