unpackaged/main/default/objects/Retool_User__c/fields/Updated_At__c.field-meta.xml
<CustomField>
    <fullName>Updated_At__c</fullName>
    <label>zOLD Updated At</label>
    <type>DateTime</type>
</CustomField>