unpackaged/main/default/objects/Retool_User__c/fields/User_Check__c.field-meta.xml
<CustomField>
    <fullName>User_Check__c</fullName>
    <formula>IF(
 LEN(User_SID__c)&lt;=37 &amp;&amp; LEFT(User_SID__c,5) = &quot;user_&quot;, 
 TRUE, 
 FALSE
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Check</label>
    <type>Checkbox</type>
</CustomField>