unpackaged/main/default/objects/Retool_User__c/fields/User_SID__c.field-meta.xml
<CustomField>
    <fullName>User_SID__c</fullName>
    <externalId>true</externalId>
    <label>User SID</label>
    <length>37</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>